--- a/core/config/src/main/resources/default.conf
+++ b/core/config/src/main/resources/default.conf
@@ -53,15 +53,12 @@ gui {
 
 dataset {
   # the file size limit for dataset upload
-  single-file-upload-maximum-size-mb = 20
-  single-file-upload-maximum-size-mb = ${?GUI_DATASET_SINGLE_FILE_UPLOAD_MAXIMUM_SIZE_MB}
+  single_file_upload_max_size_mb = 20
 
   # the maximum number of file chunks that can be held in the memory;
-  # you may increase this number if your deployment environment has enough memory resource.
-  max-number-of-concurrent-uploading-file-chunks = 10
-  max-number-of-concurrent-uploading-file-chunks = ${?GUI_DATASET_MAX_NUMBER_OF_CONCURRENT_UPLOADING_FILE_CHUNKS}
+  # you may increase this number if your deployment environment has enough memory resource
+  max_number_of_concurrent_uploading_file_chunks = 10
 
   # the size of each chunk during the multipart upload of file
-  multipart-upload-chunk-size-mb = 50 # 50 MB
-  multipart-upload-chunk-size-mb = ${?GUI_DATASET_MULTIPART_UPLOAD_CHUNK_SIZE_BYTE}
+  multipart_upload_chunk_size_mb = 50 # 50 MB
 }
