--- a/core/config/src/main/resources/default.conf
+++ b/core/config/src/main/resources/default.conf
@@ -60,5 +60,5 @@ dataset {
   max_number_of_concurrent_uploading_file_chunks = 10
 
   # the size of each chunk during the multipart upload of file
-  multipart_upload_chunk_size_mb = 50 # 50 MB
+  multipart_upload_chunk_size_mb = 50
 }
